--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tanstack/react-query": "^5.71.1",
     "axios": "^1.8.4",
     "chart.js": "^4.4.8",
+    "chartjs-adapter-date-fns": "^3.0.0",
     "chartjs-plugin-zoom": "^2.2.0",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
