--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
+    "react-loading-skeleton": "^3.5.0",
     "recharts": "^2.15.2",
+    "sass": "^1.86.3",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
